Fixed so only menu is visible

--- a/src/styles/envelope.scss
+++ b/src/styles/envelope.scss
@@ -1,4 +1,7 @@
 
+.hidden {
+    display: none;
+}
 
 .EnvelopeBox{
     display: flex;
